<resources>
    <string name="app_name">TaskAssigner</string>
    <string name="intro_image">IntroImage</string>
    <string name="lets_get_started">Let\'s Get Started</string>
    <string name="intro_text">Collaborate and Plan Together Across Multiple Devices on TaskAssigner\'s Minimalist interface.</string>

    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_description_text">Enter your name, email and password to register with us.</string>
    <string name="sign_in_description_text">Enter your email and password to sign in to your account.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait…</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="profile_title">My Profile</string>

    <string name="create_board_title">Create Board</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>

    <string name="no_boards_are_available">No Boards are available</string>
    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>

    <string name="members">Members</string>

    <string name="add_member">Add Member</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="search_member">Search Member</string>

    <string name="label_color">Label Color</string>
    <string name="select_color">No Color Selected</string>
    <string name="select_members">Select Members</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">No Due Date Selected</string>
    <string name="delete_card">Delete Card</string>

    <string name="str_select_label_color">Select Label Color</string>
    <string name="str_select_member">Select Member</string>

    <string name="default_notification_channel_id">taskassigner_notification_channel</string>
    <string name="delete_board">Delete Board</string>
    <string name="update_board">Update Board</string>
    <string name="hint_board_name">Board Name</string>
    <string name="board_details">Board Details</string>
    <string name="board_description">Board Description</string>
    <string name="board_description_optional">Board Description (optional)</string>
    <string name="not_yet_added">Not yet added</string>
    <string name="no_tasks_available">No Tasks Available</string>
    <string name="no_cards_available">No Cards Available</string>
    <string name="cards_for_the_task">Cards for the Task</string>
    <string name="card_detail">Card Detail</string>
    <string name="no_description_available">No description available for this card.</string>
</resources>