<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activities.IntroActivity">

    <TextView
        android:id="@+id/tvAppNameIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="@dimen/intro_screen_title_text_size"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/intro_screen_title_text_marginTop"
        />

    <ImageView
        android:id="@+id/ivIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_task_image"
        android:contentDescription="@string/intro_image"
        android:layout_marginTop="@dimen/intro_screen_image_marginTop"/>

    <TextView
        android:id="@+id/tvLetsGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lets_get_started"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/lets_get_started_text_size"
        android:layout_marginTop="@dimen/lets_get_started_text_marginTop"/>

    <TextView
        android:id="@+id/tvIntroText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_text"
        android:textSize="@dimen/intro_text_size"
        android:textColor="@color/secondary_text_color"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/intro_text_line_spacing_extra"
        android:layout_marginTop="@dimen/intro_text_marginTop"
        android:layout_marginStart="@dimen/intro_text_marginStartEnd"
        android:layout_marginEnd="@dimen/intro_text_marginStartEnd"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_in"
        android:textSize="@dimen/btn_text_size"
        android:background="@drawable/shape_button_rounded"
        android:foreground="?attr/selectableItemBackground"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:paddingBottom="@dimen/btn_paddingTopBottom"
        android:layout_marginTop="@dimen/intro_screen_sign_in_btn_marginTop"
        android:layout_marginStart="@dimen/btn_marginStartEnd"
        android:layout_marginEnd="@dimen/btn_marginStartEnd"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_up"
        android:textSize="@dimen/btn_text_size"
        android:textColor="@color/colorAccent"
        android:background="@drawable/white_border_shape_button_rounded"
        android:foreground="?attr/selectableItemBackground"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:paddingBottom="@dimen/btn_paddingTopBottom"
        android:layout_marginTop="@dimen/intro_screen_sign_up_btn_marginTop"
        android:layout_marginStart="@dimen/btn_marginStartEnd"
        android:layout_marginEnd="@dimen/btn_marginStartEnd"
        />

</LinearLayout>